src/components/Header/MobileMenu/mobile-menu.module.css
.mobile-menu {
  display: grid;
  grid-template: 1fr auto 40px 5vh / 1fr;
  row-gap: 2rem;
  place-items: stretch;

  width: 100%;
  height: 100vh;
  background: var(--bg);
}

.mobile-menu > nav {
  grid-row: 2;
  grid-column: 1;
  justify-self: end;
}

.mobile-menu > div:nth-of-type(1) {
  grid-row: 3;
  max-width: 125px;
  padding-left: 2em;
}

/* Close Button */
.mobile-menu > div:nth-of-type(2) {
  grid-row: 4;
  background: red;

  display: grid;
  place-items: center;
}

